@@ -3,10 +3,14 @@ package com.projetpoo.demotpfinale.Serialisation;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.projetpoo.demotpfinale.modele.Evenement;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.util.HashMap;
 import java.util.Map;
 
 public class EvenementSerializer {
@@ -22,23 +26,48 @@ public class EvenementSerializer {
         System.out.println("Serializer initialized with path: " + new File(filePath).getAbsolutePath());
     }
 
-    public void serialize(Map<String, Evenement> evenements) throws IOException {
+    public void serialize(Map<String, Evenement> nouveauxEvenements) throws IOException {
+        File file = new File(filePath);
+        System.out.println("Serializing to: " + file.getAbsolutePath());
+
+        // Créer le répertoire parent si nécessaire
+        File parentDir = file.getParentFile();
+        if (parentDir != null && !parentDir.exists()) {
+            if (!parentDir.mkdirs()) {
+                throw new IOException("Failed to create directory: " + parentDir.getAbsolutePath());
+            }
+        }
+
+        // Vérifier les permissions
+        if (file.exists() && !file.canWrite()) {
+            throw new IOException("File is not writable: " + file.getAbsolutePath());
+        }
+
+        // Étape 1 : Lire les événements existants
+        Map<String, Evenement> evenementsExistants = new HashMap<>();
+        if (file.exists() && file.length() > 0) {
+            try {
+                String content = Files.readString(file.toPath(), StandardCharsets.UTF_8);
+                System.out.println("Reading existing events: [" + content + "]");
+                evenementsExistants = objectMapper.readValue(content, new TypeReference<Map<String, Evenement>>() {});
+                System.out.println("Loaded " + evenementsExistants.size() + " existing events");
+            } catch (Exception e) {
+                System.err.println("Failed to read existing events: " + e.getMessage());
+                e.printStackTrace();
+            }
+        } else {
+            System.out.println("No existing file or empty, starting with empty map");
+        }
+
+        // Étape 2 : Fusionner les nouveaux événements
+        evenementsExistants.putAll(nouveauxEvenements);
+        System.out.println("Merged " + nouveauxEvenements.size() + " new events, total: " + evenementsExistants.size());
+
+        // Étape 3 : Écrire la map fusionnée
         try {
-            File file = new File(filePath);
-            File parentDir = file.getParentFile();
-            if (parentDir != null && !parentDir.exists()) {
-                parentDir.mkdirs();
-            }
-            System.out.println("Serializing " + evenements.size() + " events to: " + file.getAbsolutePath());
-            for (Map.Entry<String, Evenement> entry : evenements.entrySet()) {
-                Evenement evt = entry.getValue();
-                System.out.println("Event: " + entry.getKey() + ", Name: " + evt.getNom() +
-                        ", Type: " + evt.getClass().getSimpleName() + ", Date: " + evt.getDate());
-            }
-            objectMapper.writeValue(file, evenements);
-            System.out.println("Serialization completed successfully");
-            String content = new String(java.nio.file.Files.readAllBytes(file.toPath()));
-            System.out.println("Written JSON: " + content);
+            objectMapper.writeValue(file, evenementsExistants);
+            String writtenContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
+            System.out.println("Serialization successful, written JSON: [" + writtenContent + "]");
         } catch (IOException e) {
             System.err.println("Serialization failed: " + e.getMessage());
             e.printStackTrace();
